--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "build": "webpack --mode production",
+    "start": "node dist/bundle.js"
   },
   "author": "avik",
   "license": "ISC",
@@ -22,5 +24,13 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
